--- a/StudentApplication/Views/Login/Login.cshtml
+++ b/StudentApplication/Views/Login/Login.cshtml
@@ -50,9 +50,15 @@
                         <div class="col-md-6">
                             <button type="submit" class="btn btn-primary">Login</button>
                         </div>
-                       
-
                       </div>
+                    <div class="row text-center mt-4">
+                        <div class="col-md-6 " style="color:red">
+                            @ViewBag.Message
+                            
+                        </div>
+                    </div>
+
+                      
                 }
 
 
