--- a/StudentApplication/Views/Shared/_Layout.cshtml
+++ b/StudentApplication/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" style="margin-left:30px">
-                    @*<li>@Html.ActionLink("Student", "", "",new { @class = "navbar-brand", @style = "color: white",@id="student" })</li>
-                    <li>@Html.ActionLink("Teacher", "", "", new { @class = "navbar-brand", @style = "color: white",@id="teacher" })</li>*@
+                    <li>@Html.ActionLink("Department", "GetDepartmentDetails", "Department",new {area = "" } ,new { @class = "navbar-brand", @style = "color: white" })</li>
+                    <li>@Html.ActionLink("Semester", "GetSemDetails", "Semester", new { area = "" }, new { @class = "navbar-brand", @style = "color: white"})</li>
                   
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
