--- a/StudentApplication/Views/Teacher/CourseDetailsforTeacher.cshtml
+++ b/StudentApplication/Views/Teacher/CourseDetailsforTeacher.cshtml
@@ -39,10 +39,10 @@
             {
                     <tbody class="table-info">
                         <tr>
-                            <td><b>@item.depatmentId</b></td>
+                            <td><b>@item.departmentId</b></td>
                             <td><b>@item.courseId</b></td>
                             <td><b>@item.courseName</b></td>
-                            <td><b>@item.semesterName</b></td>
+                            <td><b>@item.semesterId</b></td>
                             <td><a href=""><b>Library Details</b></a></td>
 
                         </tr>
