--- a/StudentApplication/Views/Shared/_Layout.cshtml
+++ b/StudentApplication/Views/Shared/_Layout.cshtml
@@ -24,12 +24,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" style="margin-left:30px">
                     <li>@Html.ActionLink("Department", "GetDepartmentDetails", "Department",new {area = "" } ,new { @class = "navbar-brand", @style = "color: white" })</li>
-                    <li>@Html.ActionLink("Semester", "GetSemDetails", "Semester", new { area = "" }, new { @class = "navbar-brand", @style = "color: white"})</li>
+                    <li>@Html.ActionLink("Semester", "GetSemesterDetails", "Semester", new { area = "" }, new { @class = "navbar-brand", @style = "color: white"})</li>
                   
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><div style="color:white;margin-top:15px;margin-right:30px">Hi Admin</div></li>
-                    <li><button class="btn btn-danger" style="margin-top:5px" onclick="location">Logout</button></li>
+                    <li><div style="color:white;margin-top:15px;margin-right:30px">Hi @Session["Username"]</div></li>
+                    <li><button class="btn btn-danger" style="margin-top:5px" onclick="location.href='@Url.Action("Logout","Login")">Logout</button></li>
                 </ul>
             </div>
         </div>
